--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -11,7 +11,7 @@
 <div>
 Description: <%= @beer.description %>
 </div>
-Reviews: <%-@beer.reviews.each do |review| %>
+Reviews: <%-@beer.reviews.each do |review|-%>
           <div class="panel">
             <div>
               Rating: <%= review.rating %>
