--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -11,13 +11,14 @@
 <div>
 Description: <%= @beer.description %>
 </div>
-Reviews: <%-@beer.reviews.each do |review|-%>
-          <div class="panel">
-            <div>
-              Rating: <%= review.rating %>
-            </div>
-            <div>
-              Description: <%= review.description %>
-            </div>
-          </div>
-         <%-end-%>
+Reviews:
+<%-@beer.reviews.each do |review|-%>
+  <div class="panel">
+    <div>
+      Rating: <%= review.rating %>
+    </div>
+    <div>
+      Description: <%= review.description %>
+    </div>
+  </div>
+<%-end-%>
