finished edit and destroy routes for reviews

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -12,8 +12,12 @@
 Description: <%= @beer.description %>
 </div>
 Reviews:
-<%-@beer.reviews.each do |review|-%>
+<% @beer.reviews.each do |review| %>
   <div class="panel">
+    <% if review.owner?(current_user) %>
+    <%= link_to "Edit Review", edit_beer_review_path(@beer, review) %>
+    <%= link_to "Delete Review", beer_review_path(@beer, review), method: :delete %>
+    <% end %>
     <div>
       Rating: <%= review.rating %>
     </div>
@@ -21,6 +25,6 @@ Reviews:
       Description: <%= review.description %>
     </div>
   </div>
-<%-end-%>
+<% end %>
 
 <%= link_to "New Review", new_beer_review_path(@beer) %>
