IGNORE this commit

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -20,7 +20,7 @@ Reviews:
   <div class="panel">
     <% if review.owner?(current_user) %>
     <%= link_to "Edit Review", edit_beer_review_path(@beer, review) %>
-    <%= link_to "Delete Review", beer_review_path(@beer, review), method: :delete %>
+    <%= link_to "Delete Review", review_path(review), method: :delete %>
     <% end %>
     <div>
       Rating: <%= review.rating %>
