Added default image element

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -23,7 +23,7 @@ Reviews:
     <%= link_to "Delete Review", review_path(review), method: :delete %>
     <% end %>
     <div>
-      <%= image_tag(current_user.avatar)%>
+      <%= image_tag(review.user.avatar)%>
     </div>
     <div>
       Rating: <%= review.rating %>
