Completed avatar testing

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    My Avatar
+    <%= f.label :avatar, 'My Avatar' %><br />
     <%= f.file_field :avatar %>
   </div>
 
