--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -16,19 +16,30 @@ Description: <%= @beer.description %>
   <%= link_to "Edit Beer", edit_beer_path(@beer) %>
 <%-end-%>
 Reviews:
+<%= link_to "New Review", new_beer_review_path(@beer) %>
 <% @beer.reviews.each do |review| %>
   <div class="panel">
     <% if review.owner?(current_user) %>
     <%= link_to "Edit Review", edit_beer_review_path(@beer, review) %>
-    <%= link_to "Delete Review", beer_review_path(@beer, review), method: :delete %>
+    <%= link_to "Delete Review", review_path(@beer, review), method: :delete %>
     <% end %>
     <div>
       Rating: <%= review.rating %>
     </div>
+
     <div>
       Description: <%= review.description %>
     </div>
+      Beers on the wall: <%= review.upvotes_count %>
+      Beers off the wall: <%= review.downvotes_count %>
+      <div class="upvote">
+        <%= link_to "Up", review_upvotes_path(review), method: :post %>
+      </div>
+
+      <div class="downvote">
+        <%= link_to "Down", review_downvotes_path(review), method: :post %>
+      </div>
+
   </div>
 <% end %>
 
-<%= link_to "New Review", new_beer_review_path(@beer) %>
