--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,4 +1,6 @@
+<%= image_tag "landing.jpg" %>
 <h1>Beers</h1>
+
 <% @beers.each do |beer| %>
   <li><%= link_to beer.name, beer_path(beer) %></li>
 <% end %>
