--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,22 @@
     </ul>
 
     <section class="top-bar-section">
+      <ul class="left">
+        <li class="has-form">
+          <div class="row collapse">
+            <form id="search_form" action="/beers" method="get">
+              <div class="row">
+                <div class="large-8 small-9 columns">
+                  <input id="search-bar" type="text" name="query" placeholder="Find Beer">
+                </div>
+                  <div class="large-4 small-3 columns">
+                  <input type="submit" value="Search">
+                </div>
+              </div>
+            </form>
+          </div>
+        </li>
+      </ul>
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Add Beer', new_beer_path %></li>
@@ -26,6 +42,9 @@
       </ul>
     </section>
   </nav>
+
+
+
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
