Start Show Page

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,16 @@
-<%= image_tag "landing.jpg" %>
-<h1>Beers</h1>
+<div class="row">
+  <%= image_tag "landing.jpg" %>
+</div>
 
-<% @beers.each do |beer| %>
-  <li><%= link_to beer.name, beer_path(beer) %></li>
-<% end %>
+<div class="row">
+  <% @beers.each do |beer| %>
+    <div class="large-4 small-6 columns">
+      <%= link_to image_tag("fallback/default.jpg"), beer_path(beer), class: 'image-link' %>
+      <div class="panel">
+        <h5>  <%= link_to beer.name, beer_path(beer) %></h5>
+        <h6 class="subheader">Brewery: </h6>
+        <h6 class="subheader">Rating: </h6>
+      </div>
+    </div>
+  <% end %>
+</div>
