--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,3 +2,6 @@
 <% @beers.each do |beer| %>
   <li><%= link_to beer.name, beer_path(beer) %></li>
 <% end %>
+<%= paginate @beers %>
+<%= page_entries_info @beers %>
+
