--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -4,17 +4,22 @@
     <div class="row">
       <div class="small-3 columns">
         <%= image_tag("fallback/default.jpg") %>
-        <%-if user_signed_in? && @beer.amendable?(current_user) -%>
-          <ul class="button-group round even-2">
-            <li><%= link_to "Delete Beer", beer_path(@beer), method: :delete, class: "button tiny" %></li>
-            <li><%= link_to "Edit Beer", edit_beer_path(@beer), class: "button tiny" %></li>
-          </ul>
-        <%-end-%>
       </div>
       <div class="small-9 columns">
         <div class="row">
-          <div class="column">
+          <div class="small-6 columns">
             <h1><%= @beer.name %></h1>
+          </div>
+          <div class="small-6 columns" id="show-buttons">
+            <%-if user_signed_in? && @beer.amendable?(current_user) -%>
+              <ul class="button-group round even-3">
+                <li><%= link_to "New Review", new_beer_review_path(@beer), class: "button tiny" %></li>
+                <li><%= link_to "Delete Beer", beer_path(@beer), method: :delete, class: "button tiny" %></li>
+                <li><%= link_to "Edit Beer", edit_beer_path(@beer), class: "button tiny" %></li>
+              </ul>
+            <% elsif user_signed_in? %>
+                <%= link_to "New Review", new_beer_review_path(@beer), class: "button radius small" %>
+            <%-end-%>
           </div>
         </div>
         <div class="row">
@@ -36,15 +41,6 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="column">
-        <% if user_signed_in? %>
-          <%= link_to "New Review", new_beer_review_path(@beer) %>
-        <% end %>
-        Reviews:
-      </div>
-    </div>
-
     <% @beer.reviews.order(created_at: :desc).each do |review| %>
       <div class="row panel">
         <div class="small-3 columns">
@@ -53,28 +49,30 @@
         <div class="small-6 columns">
           <div class="row">
             <div class="column">
-              <p>Rating: <%= review.rating %></p>
+              <p>Rating: <%= review.rating %>/10</p>
             </div>
           </div>
           <div class="row">
             <div class="column">
-              <p>Description: <%= review.description %></p>
+              <p><%= review.description %></p>
             </div>
           </div>
         </div>
         <div class="small-3 columns">
           <div class="upvote">
-            <%= link_to "Up", review_upvotes_path(review), method: :post %>
+            <%= link_to raw("<i class='fi-arrow-up'></i>"), review_upvotes_path(review), method: :post %>
           </div>
           <div>
             <%= review.upvotes_count %> beer(s) on the wall
           </div>
           <div class="downvote">
-            <%= link_to "Down", review_downvotes_path(review), method: :post %>
+            <%= link_to raw("<i class='fi-arrow-down'></i>"), review_downvotes_path(review), method: :post %>
           </div>
           <% if user_signed_in? && review.amendable?(current_user) %>
-            <%= link_to "Edit Review", edit_beer_review_path(@beer, review) %>
-            <%= link_to "Delete Review", review_path(review), method: :delete %>
+            <ul class="button-group  stack">
+              <li><%= link_to "Edit Review", edit_beer_review_path(@beer, review), class: "radius button tiny" %></li>
+              <li><%= link_to "Delete Review", review_path(review), method: :delete, class: "radius button tiny" %></li>
+            </ul>
           <% end %>
         </div>
         </div>
