--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
-  
+
   <body>
         <div class="contain-to-grid sticky">
           <nav class="top-bar" data-topbar role="navigation">
@@ -29,7 +29,7 @@
                           <input id="search-bar" type="text" name="query" placeholder="Find Beer">
                         </div>
                         <div class="large-4 small-3 columns">
-                          <input type="submit" value="Search">
+                          <input type="submit" value="Search" class="button">
                         </div>
                       </div>
                     </form>
