--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,16 @@
  *= require foundation_and_overrides
 
  */
+ @import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+
+ *, h1 , h2, h3, h4, h5, h6 {
+   font-family: 'Bree Serif', serif;
+}
+
+ body {
+  background-image: url("background.jpg");
+  background-size:   cover;
+ }
 
 .contain-to-grid .top-bar {
   margin: 0;
@@ -38,4 +48,8 @@ li.has-form,
 
 #show-buttons {
   margin-top: 1.2em;
+}
+
+.white-text {
+  color: #FFFFFF;
 }
