--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,11 @@
               </ul>
               <ul class="right">
                 <%- if current_user -%>
-                  <li><%= link_to 'Add Beer', new_beer_path, class: "button round" %></li>
-                  <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete,  class: "button round" %></li>
+                  <li><%= link_to 'Add Beer', new_beer_path, class: "button radius" %></li>
+                  <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete,  class: "button radius" %></li>
                 <%- else -%>
-                  <li><%= link_to 'Sign Up', new_user_registration_path,  class: "button round" %></li>
-                  <li><%= link_to 'Sign In', new_user_session_path,  class: "button round" %></li>
+                  <li><%= link_to 'Sign Up', new_user_registration_path,  class: "button radius" %></li>
+                  <li><%= link_to 'Sign In', new_user_session_path,  class: "button radius" %></li>
                 <%- end -%>
               </ul>
             </section>
