--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@
 }
 
  body {
-  background-image: url("assets/images/background.jpg");
+  background-image: url("background.jpg");
   background-size:   cover;
  }
 
