--- a/app/views/review_notifier/new_review.text.erb
+++ b/app/views/review_notifier/new_review.text.erb
@@ -1,5 +1,5 @@
 To our dearest beer enthusiast,
 
-  Someone has left a review on your entry, <%= link_to @review.beer.name, beer_url(@review.beer) %>.
+  Someone has left a review on your entry for <%= @review.beer.name %>
 
 Stay thirsty my friend!
