--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,32 @@
 </head>
 <body>
 
-  <nav class="top-bar">
-    <ul class="title-area">
-      <li class="name">
-        <h1><a href="/">GroupProject</a></h1>
-      </li>
-    </ul>
+  <div class="contain-to-grid sticky">
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="/">Brewviews</a></h1>
+        </li>
+      </ul>
 
     <section class="top-bar-section">
+      <ul class="left">
+        <li class="has-form">
+          <div class="row collapse">
+            <div class="large-8 small-9 columns">
+              <form id="search_form" action="/" method="get">
+                <input type="text" name="query" placeholder="Find Beer">
+              </form>
+            </div>
+            <div class="large-4 small-3 columns">
+              <a href="#" onclick="document.getElementById('search_form').submit()" class="alert button expand">Search</a>
+            </div>
+          </div>
+        </li>
+      </ul>
       <ul class="right">
         <%- if current_user -%>
-          <li><%= link_to 'Add Beer', new_beer_path %></li>
+          <li class="Add"><%= link_to 'Add Beer', new_beer_path %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
@@ -26,14 +41,18 @@
       </ul>
     </section>
   </nav>
+</div>
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
       <%= value %>
     </div>
   <%- end -%>
-
-  <%= yield %>
+  <div class="row">
+    <div class="column">
+      <%= yield %>
+    </div>
+  </div>
 
   <%= javascript_include_tag 'application' %>
   <%= yield :extra_footer %>
