added style path and test

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,3 +53,18 @@ li.has-form,
 .white-text {
   color: #FFFFFF;
 }
+
+.style-name {
+  color: #FFFFFF;
+}
+
+.flash-message {
+  color: #FFFFFF;
+}
+
+.pagination {
+  color: #FFFFFF;
+  font-size: 14px;
+  text-align: center;
+}
+
