created brewery index and show page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,21 @@ li.has-form,
   color: #FFFFFF;
 }
 
+.brewery-title {
+  color: #FFFFFF;
+}
+
+.brewery-name {
+  color: #FFFFFF;
+}
+
+.brewery-details {
+  color: #FFFFFF
+}
+.style-title {
+  color: #FFFFFF;
+}
+
 .style-name {
   color: #FFFFFF;
 }
