--- a/app/views/beers/_beer_index.html.erb
+++ b/app/views/beers/_beer_index.html.erb
@@ -4,7 +4,7 @@
       <%= link_to image_tag("fallback/default.jpg"), beer_path(beer), class: 'image-link' %>
       <div class="panel">
         <h5>  <%= link_to beer.name, beer_path(beer) %></h5>
-        <h6 class="subheader">Brewery: </h6>
+        <h6 class="subheader">Brewery: <%= link_to beer.brewery.name, brewery_path(beer.brewery) %></h6>
         <h6 class="subheader">Rating: </h6>
       </div>
     </div>
