--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
               </ul>
               <ul>
                 <li><%= link_to "Styles", styles_path,  class: "button radius" %></li>
+                <li><%= link_to "Breweries", breweries_path, class: "button radius" %></li>
               </ul>
               <ul class="right">
                 <%- if current_user -%>
