--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Styles</h1>
+<h1 class="style-title">Styles</h1>
 <ul>
 <%-@styles.each do |style|-%>
   <li><%= link_to style.name, style_path(style) %></li>
