added average rating and welcome message

--- a/app/views/beers/_beer_index.html.erb
+++ b/app/views/beers/_beer_index.html.erb
@@ -5,7 +5,7 @@
       <div class="panel">
         <h5>  <%= link_to beer.name, beer_path(beer) %></h5>
         <h6 class="subheader">Brewery: <%= link_to beer.brewery.name, brewery_path(beer.brewery) %></h6>
-        <h6 class="subheader">Rating: </h6>
+        <h6 class="subheader">Rating: <%= beer.average_rating %></h6>
       </div>
     </div>
   <% end %>
