--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,9 @@
 <div class="row">
   <%= image_tag "landing.jpg" %>
+  <div class='description'>
+    <p class='description_content'>Welcome to Brewtopia</p>
+    <p class='description_content'>The only beer review site you'll ever need</p>
+  </div>
 </div>
 
 <%= render "beer_index" %>
