--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,17 @@ li.has-form,
   margin-top: 1.2em;
 }
 
+div.description {
+  position: absolute;
+  top: 200px;
+  left: 650px;
+  font-family: 'Bree Serif';
+  font-size: 30px;
+  color: white;
+  opacity: 0.9;
+  filter: alpha(opacity=60);
+}
+
 .white-text {
   color: #FFFFFF;
 }
