--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -1,8 +1,12 @@
-fieldset legend#beer-legend {
+fieldset legend#legend {
   background: none;
   color: #FFFFFF;
   font-size: 5em;
 
+}
+
+.formerrors {
+  color: #FFFFFF;
 }
 
 .formlabels {
@@ -10,7 +14,7 @@ fieldset legend#beer-legend {
   font-size: 1.1em;
 }
 
-.formlabels#beerdescription-label {
+.formlabels#description-label {
   font-size: 0.9em;
 }
 
