--- a/app/assets/stylesheets/layouts.css
+++ b/app/assets/stylesheets/layouts.css
@@ -1,3 +1,12 @@
 #main-title {
   font-size: 2em;
 }
+
+.formlabels {
+  color: #FFFFFF;
+  font-size: 1.1em;
+}
+
+.formlabels#beerdescription-label {
+  font-size: 0.9em;
+}
