--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -1,101 +1,91 @@
 <%= form_for @beer do |f| %>
-  <fieldset>
-    <legend id="beer-legend">New Beer</legend>
-    <% if @beer.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@beer.errors.count, "error") %> prohibited this beer from being saved:</h2>
-        <ul>
-        <% @beer.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
+  <% if @beer.errors.any? %>
+    <div id="error_explanation">
+      <h2 class="formerrors"><%= pluralize(@beer.errors.count, "error") %> prohibited this beer from being saved:</h2>
+      <ul>
+      <% @beer.errors.full_messages.each do |message| %>
+        <li class="formerrors"><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="row">
+    <div class="column">
+      <div class="row">
+        <div class="small-6 columns">
+          <div class="row">
+            <div class="small-2 columns">
+              <%= f.label :name, for: "name-field", class: "formlabels right inline" %><br>
+            </div>
+            <div class="small-10 columns">
+              <%= f.text_field :name, id: "name-field", placeholder: "Beer Name" %>
+            </div>
+          </div>
+        </div>
+        <div class="small-6 columns">
+          <div class="row">
+            <div class="small-2 columns">
+              <%= f.label :brewery_id, for: "brewery-field", class: "formlabels right inline" %><br>
+            </div>
+            <div class="small-10 columns">
+              <%= f.select :brewery_id, Brewery.all.map { |b| [b.name, b.id] }, id: "brewery-field" %>
+            </div>
+          </div>
+        </div>
       </div>
-    <% end %>
-
-    <div class="row">
-      <div class="column">
-
-        <div class="row">
-          <div class="small-6 columns">
-            <div class="row">
-              <div class="small-2 columns">
-                <%= f.label :name, for: "name-field", class: "formlabels right inline" %><br>
-              </div>
-              <div class="small-10 columns">
-                <%= f.text_field :name, id: "name-field", placeholder: "Beer Name" %>
-              </div>
+      <div class="row">
+        <div class="small-4 columns">
+          <div class="row">
+            <div class="small-3 columns">
+              <%= f.label :style_id, "Style", class: "formlabels right inline" %><br>
             </div>
-          </div>
-          <div class="small-6 columns">
-            <div class="row">
-              <div class="small-2 columns">
-                <%= f.label :brewery_id, for: "brewery-field", class: "formlabels right inline" %><br>
-              </div>
-              <div class="small-10 columns">
-                <%= f.select :brewery_id, Brewery.all.map { |b| [b.name, b.id] }, id: "brewery-field" %>
-              </div>
+            <div class="small-9 columns">
+              <%= f.select :style_id, Style.all.map { |s| [s.name, s.id] } %>
             </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="small-4 columns">
-            <div class="row">
-              <div class="small-3 columns">
-                <%= f.label :style_id, "Style", class: "formlabels right inline" %><br>
-              </div>
-              <div class="small-9 columns">
-                <%= f.select :style_id, Style.all.map { |s| [s.name, s.id] } %>
-              </div>
+        <div class="small-4 columns">
+          <div class="row">
+            <div class="small-3 columns">
+              <%= f.label :abv, 'ABV', for: "abv-field", class: "formlabels right inline" %><br>
             </div>
-          </div>
-          <div class="small-4 columns">
-            <div class="row">
-              <div class="small-3 columns">
-                <%= f.label :abv, 'ABV', for: "abv-field", class: "formlabels right inline" %><br>
-              </div>
-              <div class="small-9 columns">
-                <%= f.text_field :abv, id: "abv-field", placeholder: "ABV" %>
-              </div>
-            </div>
-          </div>
-          <div class="small-4 columns">
-            <div class="row">
-              <div class="small-3 columns">
-                <%= f.label :ibu, 'IBU', for: "ibu-field", class: "formlabels right inline" %><br>
-              </div>
-              <div class="small-9 columns">
-                <%= f.text_field :ibu, id: "ibu-field", placeholder: "IBU" %>
-              </div>
+            <div class="small-9 columns">
+              <%= f.text_field :abv, id: "abv-field", placeholder: "ABV" %>
             </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="small-1 columns">
-            <%= f.label :description, for: "beerdescription-field", class: "formlabels right inline", id: "beerdescription-label" %><br>
-          </div>
-          <div class="small-11 columns">
-            <%= f.text_area :description, id: "beerdescription-field", placeholder: "Beer Description" %>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="small-1 columns">
-            <%= f.label :image, 'Image', for: "beerimage-field", class: "formlabels right" %><br>
-          </div>
-          <div class="small-11 columns">
-            <%= f.file_field :image, id: "beerimage-field" %>
+        <div class="small-4 columns">
+          <div class="row">
+            <div class="small-3 columns">
+              <%= f.label :ibu, 'IBU', for: "ibu-field", class: "formlabels right inline" %><br>
+            </div>
+            <div class="small-9 columns">
+              <%= f.text_field :ibu, id: "ibu-field", placeholder: "IBU" %>
+            </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="column">
-            <%= f.submit "Submit Beer", class: "button small radius" %>
-          </div>
+      </div>
+      <div class="row">
+        <div class="small-1 columns">
+          <%= f.label :description, for: "beerdescription-field", class: "formlabels right inline", id: "description-label" %><br>
         </div>
-
+        <div class="small-11 columns">
+          <%= f.text_area :description, id: "beerdescription-field", placeholder: "Beer Description" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-1 columns">
+          <%= f.label :image, 'Image', for: "beerimage-field", class: "formlabels right" %><br>
+        </div>
+        <div class="small-11 columns">
+          <%= f.file_field :image, id: "beerimage-field" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column small-offset-1">
+          <%= f.submit "Submit Beer", class: "button small radius" %>
+        </div>
       </div>
     </div>
-  </fieldset>
+  </div>
 <% end %>
