--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="column">
-    <%= render 'form' %>
-    <%= link_to 'Back', beers_path %>
+    <fieldset>
+      <legend id="legend">New Beer</legend>
+        <%= render 'form' %>
+      </fieldset>
+      <%= link_to 'Back', beers_path %>
   </div>
 </div>
