--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="row">
+  <div class="small-6 columns small-centered end">
+    <fieldset>
+      <legend id="passwordlegend">Forgot your password?</legend>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <div class="formerrors">
+            <%= devise_error_messages! %>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="row">
+                <div class="small-3 columns">
+                  <%= f.label :email, for: "email-field", class: "formlabels right inline" %>
+                </div>
+                <div class="small-7 columns end">
+                  <%= f.email_field :email, id: "email-field", placeholder: "email", autofocus: true %>
+                </div>
+              </div>
+              <div class="row">
+                <div class="column small-offset-3">
+                  <%= f.submit "Send me reset password instructions", class: "button small radius" %>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </fieldset>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
