--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,4 +1,5 @@
 <h1 class="brewery-name"><%= @brewery.name %></h1>
+<h2 class="brewery-image"><%= image_tag(@brewery.image) %></h2>
 <h6 class="brewery-details">Established: <%= @brewery.year %></h6>
 <h6 class="brewery-details">Location: <%= @brewery.city %>, <%= @brewery.state %> <%= @brewery.country %></h6>
 <h6 class="brewery-details"><%= @brewery.description %></h6>
