--- a/app/views/beers/_beer_index.html.erb
+++ b/app/views/beers/_beer_index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <% @beers.each do |beer| %>
     <div class="large-4 small-6 columns">
-      <%= link_to image_tag("fallback/default.jpg"), beer_path(beer), class: 'image-link' %>
+      <%= link_to image_tag(beer.image), beer_path(beer), class: 'image-link' %>
       <div class="panel">
         <h5>  <%= link_to beer.name, beer_path(beer) %></h5>
         <p>by <%= link_to beer.brewery.name, brewery_path(beer.brewery) %></p>
