--- a/app/views/beers/_beer_index.html.erb
+++ b/app/views/beers/_beer_index.html.erb
@@ -1,11 +1,15 @@
 <div class="row">
   <% @beers.each do |beer| %>
     <div class="large-4 small-6 columns">
-      <%= link_to image_tag(beer.image), beer_path(beer), class: 'image-link' %>
-      <div class="panel">
+      <%= link_to image_tag(beer.image, id: "beer-images"), beer_path(beer), class: 'image-link' %>
+      <div class="panel" id="beer-info">
         <h5>  <%= link_to beer.name, beer_path(beer) %></h5>
         <p>by <%= link_to beer.brewery.name, brewery_path(beer.brewery) %></p>
-        <h6 class="subheader">Rating: <%= beer.average_rating %></h6>
+        <% if beer.average_rating == nil %>
+          <h6 class="subheader">No Reviews</h6>
+        <% else %>
+          <h6 class="subheader">Rating: <%= beer.average_rating %></h6>
+        <% end %>
       </div>
     </div>
   <% end %>
