--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,6 +1,21 @@
-<h1 class="brewery-name"><%= @brewery.name %></h1>
-<h2 class="brewery-image"><%= image_tag(@brewery.image) %></h2>
-<h6 class="brewery-details">Established: <%= @brewery.year %></h6>
-<h6 class="brewery-details">Location: <%= @brewery.city %>, <%= @brewery.state %> <%= @brewery.country %></h6>
-<h6 class="brewery-details"><%= @brewery.description %></h6>
+<div class="row">
+  <div class="column">
+    <div class="row">
+      <div class="small-4 columns">
+        <%= image_tag(@brewery.image, id: "brewery-image") %>
+      </div>
+      <div class="small-8 columns" id="brewery-description">
+        <h1 class="white-text" id="brewery-name"><%= @brewery.name %></h1>
+        <h4 class="white-text"><%= @brewery.city %>, <%= @brewery.state %> <%= @brewery.country %></h4>
+        <h6 class="white-text" id="brewery-year">Established in <%= @brewery.year %></h6>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <p class="text-left white-text"><%= @brewery.description %></p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%= render "beers/beer_index" %>
