--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beer Reviews</title>
-    <%= stylesheet_link_tag    "application" %>
+    <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
@@ -34,7 +34,7 @@
                   </div>
                 </li>
               </ul>
-              <ul>
+              <ul class="left">
                 <li><%= link_to "Styles", styles_path,  class: "button radius" %></li>
                 <li><%= link_to "Breweries", breweries_path, class: "button radius" %></li>
               </ul>
